# smart_library_system

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
app/: main.py
app/api/: router.py
app/config/: database.py  settings.py
app/core/: exceptions.py  middleware.py
app/modules/books/: routes.py
app/modules/books/controllers/: book_controller.py
app/modules/books/models/: book.py
app/modules/books/repositories/: book_repository.py
app/modules/books/schemas/: requests.py  responses.py
app/modules/books/services/: book_service.py
app/modules/loans/: routes.py
app/modules/loans/controllers/: loan_controller.py
app/modules/loans/models/: loan.py
app/modules/loans/repositories/: loan_repository.py
app/modules/loans/schemas/: requests.py  responses.py
app/modules/statistics/: routes.py
app/modules/users/: routes.py
app/shared/: base_model.py  base_repository.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
scripts/: init_db.py  seed_data.py
smart_library_microservices/book_service/: Dockerfile  README.md  docker-compose.yml
smart_library_microservices/book_service/app/: main.py
smart_library_microservices/loan_service/: Dockerfile  README.md  docker-compose.yml
smart_library_microservices/loan_service/app/: main.py
smart_library_microservices/user_service/: Dockerfile  README.md  docker-compose.yml  requirements.txt
smart_library_microservices/user_service/app/: main.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_books.py  test_users.py
(+37 files in other folders)
